Update blog: add Instagram (jevolabs) and style tweaks

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="profile.png" alt="Profile" class="profile-pic">
     <div>
       <h1>Jevon Lyons's Blog</h1>
-      <p>A Young and Talented Web Developer</p>
+      <p>A Young and Talented Web Developer and Entrepreneur</p>
     </div>
   </header>
 
@@ -55,9 +55,9 @@
     <section>
       <h3>Social Media</h3>
       <ul>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">LinkedIn</a></li>
-        <li><a href="#">Instagram</a></li>
+        <li><a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a></li>
+        <li><a href="https://instagram.com/jevolabs" target="_blank" rel="noopener">Instagram</a></li>
       </ul>
     </section>
     <section>
