Update styles and fix sidebar colours

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <section>
       <h3>Archives</h3>
       <ul>
-        <li>September 2025</li>
-        <li>August 2025</li>
-        <li>July 2025</li>
-        <li>June 2025</li>
+        <li><a href="#">September 2025</a></li>
+        <li><a href="#">August 2025</a></li>
+        <li><a href="#">July 2025</a></li>
+        <li><a href="#">June 2025</a></li>
       </ul>
     </section>
   </aside>
